force-app/main/default/objects/SOLXYZCSO001__CSOImageMapping__c/SOLXYZCSO001__CSOImageMapping__c.object-meta.xml
<CustomObject>
    <label>CSOImageMapping</label>
    <nameField>
        <displayFormat>M-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>CSO画像マッピング通番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>