force-app/main/default/objects/SOLXYZCSO001__CSOImageMapping__c/fields/SOLXYZCSO001__ImageMapping__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ImageMapping__c</fullName>
    <label>Imageマッピング</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>