force-app/main/default/objects/SOLXYZCSO001__CSOImageMapping__c/fields/SOLXYZCSO001__Record__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Record__c</fullName>
    <label>レコードID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>