force-app/main/default/objects/SOLXYZCSO001__CSOImageMapping__c/fields/SOLXYZCSO001__RecordCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RecordCreatedDate__c</fullName>
    <label>レコード作成日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>